[tool.poetry]
name = "pymatch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
seaborn = "^0.12.0"
statsmodels = "^0.13.2"
scipy = "patsy"

[tool.poetry.group.dev.dependencies]
pandas = "^1.4.4"
scipy = "^1.9.1"
patsy = "^0.5.2"
numpy = "^1.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
